styles/styles.css
* {
    margin: 0;
    padding: 0;
}

body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

h1 {
    color: rebeccapurple;
}

p {
    padding: 0;
}

nav {
    max-width: 840px;
    margin: 1rem;
    padding: 1rem;
    background-color: #eee;
    border: 1px solid rgb(0 0 0 /0.2);
    display: block;
}

nav a {
    color: black;

}

main {
    max-width: 840px;
    margin: 1rem;
    border: 1px solid rgb(0 0 0 /0.2);
    padding: 1rem;
    background-color: #eee;
    color: #333;
    text-align: center;
}

aside {
    width: 20rem;
    margin: 1rem;
    border: 1px solid rgb(0 0 0 /0.2);
    padding: 1rem;
    background-color: #eee;
    color: #333;
    text-align: center;
}

aside img {
    width: 200px;
    height: auto;
}

main img {
    width: 200px;
    height: auto;
    border: 1px solid rgb(0 0 0 /0.2);
    padding: 5px;
    box-shadow: 0 0 10px rebeccapurple;
    margin: 10px 0;
}

footer {
    max-width: 840px;
    margin-top: 15px;
    border-top: 1px solid #000;
    text-align: center;
}

